# immichFrame.Web/src/lib/immichFrameApi.ts
@@ -56,6 +56,7 @@ export type GeneralSettings = {
     imagePan?: boolean;
     imageFill?: boolean;
     playAudio?: boolean;
+    touchZoneControls?: boolean;
     layout?: string | null;
     renewImagesDuration?: number;
     webcalendars?: string[] | null;
@@ -313,6 +314,7 @@ export type ClientSettingsDto = {
     imagePan?: boolean;
     imageFill?: boolean;
     playAudio?: boolean;
+    touchZoneControls?: boolean;
     layout?: string | null;
     language?: string | null;
 };
